<resources>
    <string name="app_name">4Fit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FRAGMENT LOGIN -->
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Entrar</string>
    <string name="registrarse">Crear cuenta</string>
    <string name="registrarse_google">Entrar con Google</string>
    <string name="contraseña_olvidada">¿Has olvidado tu contraseña?</string>
    <string name="error_inicio_sesion">Datos incorrectos</string>
    <string name="usuario_no_introducido">Debe introducir el usuario</string>
    <string name="contraseña_no_introducida">Debe introducir la contraseña</string>
    <string name="no_email">No has introducido un correo electronico</string>
    <string name="contraseña_no_segura">La contraseña no es segura</string>
    <string name="fallo_inicio_sesion">Fallo al iniciar sesion</string>
    <string name="no_se_pudo_iniciar_sesion">No se pudo iniciar sesion.</string>
    <string name="fallo_registro">Fallo al registrar</string>
    <string name="no_se_pudo_registrar">No se pudo registrar el nuevo usuario.</string>
    <string name="fallo_contraseña_olvidada">Fallo al intentar recuperar contraseña</string>
    <string name="no_se_pudo_recuperar_contraseña">No se pudo enviar el correo de recuperacion de contraseña.</string>
    <string name="correo_recuperacion_enviado">Se ha enviado el correo de recuperacion.</string>
    <string name="inicio_con_google_correcto">Acceso con Google Correcto</string>
    <string name="inicio_con_google_fallido">Error al acceder con Google</string>
    <string name="volver_login">Volver</string>

    <!-- FRAGMENT POST-REGISTRO -->
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="bienvenido_post_registro">Bienvenido/a a 4Fit, antes de empezar necesitamos algunos datos.</string>
    <string name="continuar">Continuar</string>
    <string name="años">Años</string>
    <string name="kilos">Kg.</string>
    <string name="centimetros">Cm.</string>
    <string name="nombre_vacio">El campo nombre es obligatorio</string>
    <string name="apellidos_vacios">El campo apellidos es obligatorio</string>
    <string name="edad_vacio">El campo edad es obligatorio</string>
    <string name="altura_vacio">El campo altura es obligatorio</string>
    <string name="peso_vacio">El campo peso es obligatorio</string>

    <!-- FRAGMENT DIAS -->
    <string name="guardar_rutina">Guardar</string>
    <string name="cambiar_dias_rutina">Dias</string>
    <string name="rutina_asignada">Rutina asignada correctamente</string>
    <string name="error_rutina_asignada">Error al asignar rutina</string>
    <string name="no_puede_quitar_ultimo_dia">No puedes quitar el unico dia de tu rutina</string>
    <string name="nombre_rutina_existente">Ya tienes una rutina con ese mismo nombre</string>

    <!-- DIALOG DIAS FRAGMENT DIAS -->
    <string name="titulo_dialog_dias_semana">¿Qué dias quieres entrenar?</string>
    <string name="boton_negativo_dialog">Volver</string>
    <string name="boton_positivo_dialog">Seguir</string>
    <string name="error_dias">Debes seleccionar al menos un dia</string>
    <string name="guardado_exito">Tu rutina ha sido creada con exito</string>
    <string name="editador_exito">Tu rutina ha sido editada con exito</string>
    <string name="guardado_fallo">Tu rutina no ha podido ser guardada</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>

    <!-- DIALOG NOMBRE RUTINA FRAGMENT DIAS -->
    <string name="titulo_dialog_nombre_rutina">Establece un nombre para la rutina</string>
    <string name="boton_aceptar_nombre_rutina">Aceptar</string>
    <string name="boton_cancelar_nombre_rutina">Cancelar</string>
    <string name="nombre_rutina">Nombre</string>
    <string name="error_nombre_rutina_vacio">El nombre de la rutina no puede estar vacio.</string>

    <!-- DIALOG SERIES FRAGMENT LISTA DE EJERCICIOS -->
    <string name="titulo_dialogo_series">Especifica las series</string>
    <string name="nombre_serie">Serie</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="ud_reps">Rep.</string>
    <string name="boton_añadir">+</string>
    <string name="boton_quitar">-</string>
    <string name="boton_añadir_ejercicio">Añadir</string>
    <string name="max_ejercicios_superado">Has llegado al maximo de ejercicios por dia.</string>
    <string name="ejercicio_ya_añadido">Ya has añadido este ejercicio</string>

    <!-- DIALOG FILTROS LISTA EJERCICIOS-->
    <string name="titulo_dialogo_filtros">Filtros</string>
    <string name="filtros_grupo_muscular">Grupo Muscular</string>
    <string name="filtros_dificultad">Dificultad</string>
    <string name="filtros_material">Materiales</string>
    <string name="boton_filtrar">Filtrar</string>
    <string name="boton_cerrar">Cerrar</string>
    <string name="boton_limpiar_filtros">Limpiar</string>

    <!-- DIALOG EJERCICIO CUSTOM LISTA EJERCICIOS-->
    <string name="ejercicio_custom_dialog_titulo">Ejercicio personalizado</string>
    <string name="boton_crear_ejercicio_custom">Crear</string>
    <string name="boton_cerrar_ejercicio_custom">Cerrar</string>
    <string name="nombre_ejercicio_custom">Nombre</string>
    <string name="descripcion_ejercicio_custom">Descripcion</string>
    <string name="grupo_muscular_ejercicio_custom">Grupo Muscular</string>
    <string name="nombre_ejercicio_custom_vacio">El nombre no puede estar vacio.</string>
    <string name="nombre_ejercicio_custom_corto">El nombre introducido es demasiado corto.</string>
    <string name="descripcion_ejercicio_custom_vacia">La descripcion no puede estar vacia.</string>
    <string name="grupo_muscular_no_seleccionado_ejercicio_custom">Debe seleccionar un grupo muscular.</string>
    <string name="no_existen_coincidencias">No existen coincidencias</string>

    <!-- CARD DIAS FRAGMENT DIAS-->
    <string name="añadir_ejercicio_dia">Añadir</string>
    <string name="ver_ejercicios_dia">Mostrar</string>
    <string name="rutina_incompleta">No ha rellenado la rutina completamente</string>
    <string name="ejercicios_dia"> ejercicios añadidos.</string>
    <string name="eleccion_dias_rutina">¡Muy bien! Ya tenemos los dias que entrenaras, ahora veamos los ejercicios.</string>

    <!-- MENU FRAGMENT LISTA EJERCICIOS -->
    <string name="buscar_ejercicio">Buscar</string>
    <string name="buscar_ejercicio_placeholder">Buscar...</string>
    <string name="filtrar_ejercicio">Filtrar</string>
    <string name="añadir_ejercicio_custom">Añadir</string>

    <!-- FRAGMENT INICIAL -->
    <string name="no_ha_iniciado_dia">Aun no has iniciado el dia.</string>
    <string name="dia_ya_finalizado">El dia ya ha finalizado</string>
    <string name="dia_iniciado">Dia iniciado</string>
    <string name="dia_finalizado">Dia finalizado</string>
    <string name="descanso">Descanso</string>

    <!-- DIALOGO FINALIZAR DIA FRAGMENT INICIAL -->
    <string name="titulo_dialogo_finalizar_dia">¿Desea finalizar el dia?</string>
    <string name="mensaje_dialogo_finalizar_dia">Esta apunto de dar por finalizado el dia, si lo finaliza no podra volver a editarlo.</string>

    <!-- MENU FRAGMENT INICIAL -->
    <string name="perfil_menu">Perfil</string>
    <string name="historico_menu">Historico</string>
    <string name="no_se_ha_encontrado_rutina">No se ha encontrado ninguna rutina.</string>

    <!-- FRAGMENT PERFIL -->
    <string name="imc_perfil">Su IMC es de: </string>

    <!-- DIALOG CERRAR SESION FRAGMENT PERFIL -->
    <string name="titulo_dialogo_cerrar_sesion">Cerrar sesión</string>
    <string name="desea_cerrar_sesion">¿Desea cerrar la sesión actual?</string>


    <!-- DIALOG GUARDAR CAMBIOS FRAGMENT PERFIL -->
    <string name="titulo_dialogo_guardar_cambios">Guardar cambios</string>
    <string name="desea_guardar_cambios">¿Desea guardar cambios?</string>
    <string name="cambios_guardados_con_exito">Cambios guardados con exito</string>

    <!-- MENU FRAGMENT PERFIL -->
    <string name="guardar_cambios_perfil">Guardar</string>
    <string name="mas_opciones_perfil">Más opciones</string>
    <string name="cambiar_mail_perfil">Cambiar email</string>
    <string name="cerrar_sesion_perfil">Cerrar sesión</string>
    <string name="seleccionar_rutina">Seleccionar rutina</string>
    <string name="ver_rutinas">Ver rutinas</string>

    <!-- FRAGMENT DETALLE EJERCICIO -->
    <string name="material_necesario">Material necesario</string>
    <string name="bandas_elasticas_necesarias">Bandas elasticas</string>
    <string name="material_no_necesario">Sin material</string>

    <!-- FRAGMENT LISTA RUTINAS -->
    <string name="eliminar_rutina">Eliminar</string>
    <string name="editar_rutina">Editar</string>
    <string name="dias_rutina">dias de entrenamiento.</string>
    <string name="rutina_eliminada_correctamente">Rutina eliminada correctamente</string>
    <string name="fallo_eliminar_rutina">No hemos conseguido eliminar la rutina</string>
    <string name="fallo_eliminar_rutina_actual">No puedes eliminar la rutina que usas actualmente</string>
    <string name="fallo_eliminar_unica_rutina">No puedes eliminar tu unica rutina</string>

    <!-- DIALOG ELIMINAR RUTINA FRAGMENT LISTA RUTINAS -->
    <string name="titulo_dialogo_eliminar_rutina">Eliminar rutina</string>
    <string name="mensaje_dialogo_eliminar_rutina">¿Esta seguro de eliminar esta rutina?</string>
    <string name="boton_eliminar_rutina">Eliminar</string>

    <!-- MENU FRAGMENT LISTA RUTINAS -->
    <string name="añadir_rutina">Añadir rutina</string>

    <!-- FRAGMENT LISTA HISTORICO -->
    <string name="mensaje_error_lista_historicos">No hemos podido obtener su historico</string>

    <!-- MENU FRAGMENT LISTA HISTORICO -->
    <string name="filtrar_historico">Filtrar historico</string>
    <string name="limpiar_filtro_historico">Limpiar filtro historico</string>
    <string name="mensaje_date_picker_range">Selecciona el intervalo de fechas</string>

</resources>