<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbLunes"
            android:text="@string/lunes"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/color_principal">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbMartes"
            android:text="@string/martes"
            android:layout_marginLeft="20dp">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbMiercoles"
            android:text="@string/miercoles"
            android:layout_marginLeft="20dp">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbJueves"
            android:text="@string/jueves"
            android:layout_marginLeft="20dp">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbViernes"
            android:text="@string/viernes"
            android:layout_marginLeft="20dp">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbSabado"
            android:text="@string/sabado"
            android:layout_marginLeft="20dp">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbDomigo"
            android:text="@string/domingo"
            android:layout_marginLeft="20dp">

        </com.google.android.material.checkbox.MaterialCheckBox>



</LinearLayout>