<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/buscarEjercicio"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/buscar_ejercicio"
        android:contentDescription="@string/buscar_ejercicio"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filtrarEjercicio"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/filtrar_ejercicio"
        android:contentDescription="@string/filtrar_ejercicio"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/añadirEjercicioCustom"
        android:icon="@drawable/ic_baseline_playlist_add_24"
        android:title="@string/añadir_ejercicio_custom"
        android:contentDescription="@string/añadir_ejercicio_custom"
        app:showAsAction="ifRoom" />

</menu>